test/compile_errors/stage1/obj/ignored_deferred_statement_value.zig
export fn foo() void {
    defer {1;}
}

// ignored deferred statement value
//
// tmp.zig:2:12: error: expression value is ignored
